data/derived/comb/progs/unify/prog3142.ml.out
Characters 29-40:
  wwhile ((not (f b)),b);;
          ^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
